# chameleon-ipa-hardware-manager

./: .gitignore  README.rst  setup.cfg  tox.ini
chameleon_hardware_manager/: __init__.py
chameleon_ipa_hardware_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
