[metadata]
name = chameleon-ipa-hardware-manager
author = Jason Anderson
author-email = jasonanderson@uchicago.edu
summary = Chameleon IPA Hardware Manager
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Intended Audience :: Developers
        Operating System :: OS Independent
        License :: OSI Approved :: Apache Software License
        Programming Language :: Python

[files]
packages =
    chameleon_hardware_manager

[entry_points]
ironic_python_agent.hardware_managers =
    chameleon = chameleon_hardware_manager:ChameleonHardwareManager
